--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   </properties>
 
   <dependencies>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -29,6 +30,22 @@
 	</dependency>
     
   </dependencies>
+  
+  <build>
+  <plugins>
+  
+   <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.17</version>
+        <configuration>
+          <suiteXmlFiles>
+            <suiteXmlFile>src/test/resources/suite.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+    </plugin>
+   </plugins>
+   </build>
   
  <!--  <build>
 		<plugins>
